--- a/pwa.html
+++ b/pwa.html
@@ -16,7 +16,7 @@
         };
         window.onload = function(){
           document.addEventListener("click", function(){
-            location.href = 'select.html';
+            location.href = `select.html?_t=${+new Date()}`;
             // monaca.pushPage('select.html');
           }, false);
           document.addEventListener('keydown', (e)=>{
@@ -28,11 +28,20 @@
     <title>Moriy - the deep fact</title>
     <style type="text/css">
         body {
-            width: 400px;
-            margin: 0 0; padding: 0 0;
-            background-color: #000;
+            /* width: 400px; */
+            margin: 0 0;
+            padding: 0 0;
+            /* background-color: #000; */
             overflow: hidden;
-        }
+            user-select: none;
+            background-color: rgb( 2, 8,16);
+            position: absolute;
+            margin: auto;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+          }
 
         div#TitleBlock {
             margin: 0 0; padding: 0 0;
@@ -45,7 +54,7 @@
           margin-top: -48px;
         }
 
-        div#AdBlock {
+        /* div#AdBlock {
             margin: 0 0; padding: 0 0;
             position: absolute;
             width: 100%; height: 50px;
@@ -53,7 +62,7 @@
             text-align: center;
             z-index: 65536;
             overflow: hidden;
-        }
+        } */
     </style>
   </head>
 
@@ -63,14 +72,14 @@
       <img id="title" src="./siteimg/logo.png" />
     </div>
 
-    <div id="AdBlock">
+    <!-- <div id="AdBlock"> -->
 <!-- nend -->
 <!-- <script type="text/javascript">
 var nend_params = {"media":5467,"site":20617,"spot":32351,"type":1,"oriented":3};
 </script>
 <script type="text/javascript" src="http://js1.nend.net/js/nendAdLoader.js"></script>                     -->
 <!-- nend -->
-    </div>
+    <!-- </div> -->
 
   </body>
 </html>
