--- a/stage10.html
+++ b/stage10.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no">
-        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <title>Moriy - the deep fact</title>
         <link rel="shortcut icon" href="promote/iconimage_moriy_512x512.png"></link>
@@ -33,6 +33,10 @@
         </script>
         <style type="text/css">
             body { margin: 0; background-color: #000; }
+            #enchant-stage {
+              position: absolute; margin: auto;
+              top: 0; right: 0; bottom: 0; left: 0;
+            }
         </style>
     </head>
     <body>
