--- a/story.html
+++ b/story.html
@@ -150,11 +150,11 @@
       </p>
       <p><br/></p>
       <p>
-        とき を 同じくして 王国 には いへん が おこりはじめていた。
+        とき を 同じくして 王国 には いへん が おこり はじめて いた。
         しぜんさいがい や てんこう の ふじゅん による ふさく が 目に 見えて ふえた。
       </p>
       <p>
-        ひとびと は 光の めがみ ライラ の かご が うすれ ヤミの 女王 アリル が ふっかつ するのでは ないか と うわさする よう に なった。
+        ひとびと は 光の めがみ ライラ の かご が うすれ ヤミの 女王 アリル が ふっかつ するのでは ないか と うわさ するよう に なった。
       </p>
       <p><br/></p>
       <p>
@@ -167,7 +167,7 @@
       </p>
       <p>
         きょう は しんえいたい に とって とくべつ な くんれん の 日 だ。
-        まんがいち の じたい に 国王 たち を だっしゅつ させる いわば ひなん くんれん で ある。
+        まんがいち の じたい に へいか や おうぞく を だっしゅつ させる いわば ひなん くんれん で ある。
       </p>
       <p>
         この へいわ な 王国 で そんな じたい が あるの だろうか。
@@ -177,13 +177,13 @@
       <p>
         ひとびと は ふあん の はけぐち に わかりやすい げんいん を もとめて いる。
         ヤミ の 女王 アリル ふっかつ の うわさ に しかり。
-        こと に よると 国王 や 大そうじょう さま あるいは ヨシュナ さえも ひょうてき に なりえる。
+        こと に よると へいか や 大そうじょう さま あるいは ヨシュナ さえも ひょうてき に なりえる。
         人の 上に 立つ もの は 人の 目に つく もの でも ある。
       </p>
       <p>
         そこまで かんがえ て ヨシュナ は 大きく かぶり を ふった。
         ばかな。
-        へいみん しゅっしん の 自分 が たみ を かそうてき と かんがえる なんて。
+        へいみん しゅっしん の 自分 が たみ を てき と かんがえる なんて。
       </p>
       <p><br/></p>
       <p>
@@ -226,7 +226,7 @@
       </p>
       <p>
         そろそろ きゅうけい も おわり に して せいどう に 光 を ともして きて おくれ。
-        めがみ さま の しゅくふく で おぬし の き も 少しは はれる じゃろう。
+        めがみ さま の しゅくふく で おぬし の こころ も 少しは はれる じゃろう。
       </p>
       <p>
         フォ フォ フォ。
@@ -244,7 +244,7 @@
       <p>
         光の めがみ ライラ に つきしたがう せいれい セイレン を まつる そうごん な さいし。
         しかし ヨシュナ は そらぞらしい きもち で それ を ながめ て いた。
-        ろうそく に 火 を ともした ぐらい で 光 の めがみ さま の ごきげん など とれる ものか。
+        ろうそく に 火 を ともした ぐらい で かみがみ の ごきげん など とれる ものか。
       </p>
       <p>
         こうき な かたがた には りかい できまい が おてんとう さま だけ を あがめた ところ で なんに なる。
@@ -313,7 +313,11 @@
         <span class="index"></span><br/><span class="name"></span>
       </p>
       <p>
-        あたたかい しゅくふく の 光 が れいびょう に みちた あと せきひつ の ひとつ が おとを 立てて ひらいた。
+        セイレン が はなつ あたたかい しゅくふく の 光 が ヨシュナ を つつんだ。
+        あまり けいけん な しんと とは いえない ヨシュナ で あった が むね の うち から わきでる ちから と こうようかん に おどろき を かくせない。
+      </p>
+      <p>
+        ふたたび りんと した せいじゃく が おとずれた とき せきひつ の ひとつ が おとを 立てて ひらいた。
         その中 に ちかへ と つづく かいだん が 見える。
       </p>
       <p>
