--- a/story.html
+++ b/story.html
@@ -322,7 +322,8 @@
       </p>
       <p>
         ヨシュナ は かいだん の まえ で 立ち つくして いた。
-        大きな なにか に まきこまれて いる が それが なにか は わからない。
+        今 自分 は 大きな なにか に まきこまれて いる。
+        しかし それが なにか は わからない。
       </p>
       <p>
         だが ふしぎ と ふあん は なかった。
