--- a/story.html
+++ b/story.html
@@ -19,9 +19,9 @@
         {no: 7, title: 'Forecourt'},
         {no: 8, title: 'Mausoleum'},
         {no: 4, title: 'Passkey'},
-        {no: 5, title: 'Dungeon'},
         {no: 3, title: 'Maze'},
         {no: 6, title: 'Loophole'},
+        {no: 5, title: 'Dungeon'},
         {no: 9, title: 'Core'},
         {no: 10, title: 'Lyra'},
         {no: 11, title: 'Epilogue'},
@@ -64,7 +64,6 @@
 
         $container = $story.parentElement;
         $container.addEventListener('scroll', function() {
-          console.log($container.scrollHeight - $container.scrollTop);
           if ($container.scrollHeight - $container.scrollTop <= $container.clientHeight + 1) {
             gotoStage(filename);
           }
@@ -167,7 +166,7 @@
       </p>
       <p>
         きょう は しんえいたい に とって とくべつ な くんれん の 日 だ。
-        まんがいち の じたい に へいか や おうぞく を だっしゅつ させる いわば ひなん くんれん で ある。
+        まんがいち の じたい に へいか を だっしゅつ させる いわば ひなん くんれん で ある。
       </p>
       <p>
         この へいわ な 王国 で そんな じたい が あるの だろうか。
@@ -176,7 +175,7 @@
       </p>
       <p>
         ひとびと は ふあん の はけぐち に わかりやすい げんいん を もとめて いる。
-        ヤミ の 女王 アリル ふっかつ の うわさ に しかり。
+        ヤミ の 女王 アリル ふっかつ の うわさ も しかり。
         こと に よると へいか や 大そうじょう さま あるいは ヨシュナ さえも ひょうてき に なりえる。
         人の 上に 立つ もの は 人の 目に つく もの でも ある。
       </p>
@@ -210,7 +209,7 @@
       <p><br/></p>
       <p>
         大そうじょう さま ... !<br/>
-        わたし は ... その あの えーと。
+        わたし は その あの えーと。
       </p>
       <p><br/></p>
       <p>
@@ -313,15 +312,15 @@
         <span class="index"></span><br/><span class="name"></span>
       </p>
       <p>
-        セイレン が はなつ あたたかい しゅくふく の 光 が ヨシュナ を つつんだ。
-        あまり けいけん な しんと とは いえない ヨシュナ で あった が むね の うち から わきでる ちから と こうようかん に おどろき を かくせない。
+        あたたかい しゅくふく の 光 が ヨシュナ を つつんだ。
+        けいけん な しんと とは いえない ヨシュナ で あった が むね の うち から わきあがる ちから と こうようかん に おどろき を かくせない。
       </p>
       <p>
         ふたたび りんと した せいじゃく が おとずれた とき せきひつ の ひとつ が おとを 立てて ひらいた。
         その中 に ちかへ と つづく かいだん が 見える。
       </p>
       <p>
-        ヨシュナ は かいだん の まえ で 立ち つくして いた。
+        ヨシュナ は かいだん の まえ で 立ち つくした。
         今 自分 は 大きな なにか に まきこまれて いる。
         しかし それが なにか は わからない。
       </p>
@@ -344,17 +343,47 @@
       <p class="title">
         <span class="index"></span><br/><span class="name"></span>
       </p>
-      <p></p>
+      <p>
+        どれくらい あるいた だろうか。
+        みち は ゆるやか に くだり ながら どこ までも つづいて いる ようだ。
+        れいびょう の おく に こんなに ひろい くうかん が ひろがって いた とは。
+      </p>
+      <p>
+        ヨシュナ が かいだん に あし を ふみいれた とき から きに なって いる こと が ある。
+        ここ は くらく じめじめ と して いて 光 の じいん とは まぎゃく の かんきょう なのだ。
+      </p>
       <p><br/></p>
+      <p>
+        フォ フォ フォ。<br/>
+        この みち は ちの そこ まで つづいて おる。
+        いきつく 先 は てんごく とも じごく とも いわれる ばしょ。
+        そこ に おわす のは かみ とも あくま とも いわれる そんざい。
+        おぬし を 生かし おぬし を ころす せかい の ことわり。
+      </p>
+      <p>
+        かんげい は されて おらぬ が きょぜつ も されぬ。
+        じんち を こえた ちから に はばまれ そして みちびかれる じゃろう。
+      </p>
+      <p>
+        ヨシュナ よ おそれるで ないぞ。
+        おそれ は まなこ を くもらせる。
+      </p>
+      <p><br/></p>
+      <p>
+        光 の きょうぎ とは ちがう なぞめいた ことば に ヨシュナ は うすきみ の わるさ を おぼえた。
+        大そうじょう さま は いたん なの だろうか。
+        しかし 今 は この ろうじん と ともに すすむ しか ないのだ。
+      </p>
     </section>
-    <section id="stage05:Dungeon" class="story bitfont">
+    <section id="stage06:Loophole" class="story bitfont">
       <p class="title">
         <span class="index"></span><br/><span class="name"></span>
       </p>
-      <p></p>
+      <p>
+      </p>
       <p><br/></p>
     </section>
-    <section id="stage06:Loophole" class="story bitfont">
+    <section id="stage05:Dungeon" class="story bitfont">
       <p class="title">
         <span class="index"></span><br/><span class="name"></span>
       </p>
