--- a/story.html
+++ b/story.html
@@ -71,7 +71,7 @@
         
         const boostScroll = 15;
         const normalScroll = 1;
-        const interval = 1000 / 15; // 90 FPS
+        const interval = 1000 / 15; // FPS
 
         const scroll = function(){
           const nextScrollTop = $container.scrollTop + (touching ? boostScroll : normalScroll);
@@ -345,12 +345,12 @@
       </p>
       <p>
         どれくらい あるいた だろうか。
-        みち は ゆるやか に くだり ながら どこ までも つづいて いる ようだ。
+        えんえん と くだりざか を おりた あと は うらろじ の ような ぐねぐね と せまく いりくんだ みち が つづいて いる。
         れいびょう の おく に こんなに ひろい くうかん が ひろがって いた とは。
       </p>
       <p>
-        ヨシュナ が かいだん に あし を ふみいれた とき から きに なって いる こと が ある。
-        ここ は くらく じめじめ と して いて 光 の じいん とは まぎゃく の かんきょう なのだ。
+        すすむ ほど に ヤミ は こく なり じめじめ と した くうき が はだ に まとわり つく。
+        光 の じいん とは まぎゃく の 人を ふあん に させる ふかい な かんきょう だった。
       </p>
       <p><br/></p>
       <p>
