--- a/story.html
+++ b/story.html
@@ -344,24 +344,58 @@
         <span class="index"></span><br/><span class="name"></span>
       </p>
       <p>
-        どれくらい あるいた だろうか。
-        えんえん と くだりざか を おりた あと は うらろじ の ような ぐねぐね と せまく いりくんだ みち が つづいて いる。
+        どれくらい あるいた だろう。
+        えんえん と くだりざか を おりた あと は めいろ の ように ぐねぐね と いりくんだ みち に なった。
         れいびょう の おく に こんなに ひろい くうかん が ひろがって いた とは。
       </p>
       <p>
-        すすむ ほど に ヤミ は こく なり じめじめ と した くうき が はだ に まとわり つく。
-        光 の じいん とは まぎゃく の 人を ふあん に させる ふかい な かんきょう だった。
+        すすむ ほど に ヤミ は ふかまり じめじめ と はだ に まとわり つく。
+        光 の じいん とは まぎゃく の ふかい で 人を ふあん に させる ばしょ。
+        光 の きょうぎ に てらせば じごく の ような ばしょ。
+      </p>
+      <p><br/></p>
+      <p>
+        大そうじょう さま。<br/>
+        ヤミの 女王 アリル の ふっかつ の うわさ ... ほんとう なの でしょう か ?
+        この ふかい ヤミ は アリル の ちから に よる もの なの でしょう か ?
       </p>
       <p><br/></p>
       <p>
         フォ フォ フォ。<br/>
-        この みち は ちの そこ まで つづいて おる。
-        いきつく 先 は てんごく とも じごく とも いわれる ばしょ。
+        しせい の うわさ も ばかには できんの。
+        しんじつ を はんぶん いいあてて おる。
+        のこり の はんぶん を みさだめる のが おぬし の やくめ じゃ。
+      </p>
+      <p>
+        まず は この めいろ を ぬけよ。
+        なに むずかしい こと では ない。
+        しんけい を とぎすませば めいろ など あって なき に ひとしい。
+      </p>
+      <p>
+        フォ フォ フォ。
+      </p>
+    </section>
+    <section id="stage06:Loophole" class="story bitfont">
+      <p class="title">
+        <span class="index"></span><br/><span class="name"></span>
+      </p>
+      <p>
+        めいろ を ぬけた 先には くうかん が ひろがって いた。
+        じいん や せいどう に ちかい ものの それ とは にても につかない はいち の こうぞうぶつ が みえる。
+      </p>
+      <p><br/></p>
+      <p>
+        フォ フォ フォ。<br/>
+        ひとの ちから が およぶ せかい は ここまで じゃ。
+        この とびら の むこう は ヤミ に すまう ものども の せかい。
+      </p>
+      <p>
         そこ に おわす のは かみ とも あくま とも いわれる そんざい。
         おぬし を 生かし おぬし を ころす せかい の ことわり。
       </p>
       <p>
-        かんげい は されて おらぬ が きょぜつ も されぬ。
+        ふたつ の せかい を むすぶ とびら を ぬけた もの だけ が ゆきき を ゆるされる。
+        かんげい は されぬ が きょぜつ も されぬ。
         じんち を こえた ちから に はばまれ そして みちびかれる じゃろう。
       </p>
       <p>
@@ -375,26 +409,55 @@
         しかし 今 は この ろうじん と ともに すすむ しか ないのだ。
       </p>
     </section>
-    <section id="stage06:Loophole" class="story bitfont">
-      <p class="title">
-        <span class="index"></span><br/><span class="name"></span>
-      </p>
-      <p>
-      </p>
-      <p><br/></p>
-    </section>
     <section id="stage05:Dungeon" class="story bitfont">
       <p class="title">
         <span class="index"></span><br/><span class="name"></span>
       </p>
-      <p></p>
+      <p>
+        くらい みち の おく に なにものか の けはい を かんじる。
+        ヨシュナ は きんちょう した おももち で こし の けん に 手を かけた。
+      </p>
       <p><br/></p>
+      <p>
+        フォ フォ フォ。<br/>
+        ヨシュナ よ けん を ぬいて は ならぬ。
+        ヤミ の じゅうにん たち を きずつけては ならぬ。
+        かれら も ただ かれら の いのち を まっとう している に すぎぬ。
+        にんげん と なんら かわり は ないの じゃ。
+      </p>
+      <p><br/></p>
+      <p>
+        きょうぎ に はんする ことば の かずかず。
+        やはり 大そうじょう さま は いたん としか おもえない。
+        そんな ヨシュナ の おもい を さっした のか 大そうじょう さま は ことば を つづける。
+      </p>
+      <p><br/></p>
+      <p>
+        ヨシュナ よ きけ。
+        せかい を みたす 光 と ヤミ どちら も ふえる ことも へる ことも ない。
+        ただ ときと して かたより が あらわれる のみ。
+      </p>
+      <p>
+        今 まさに かたより が しょうじて おる。
+        これ を たださねば のんき に しんこう など して おれぬ。
+      </p>
     </section>
     <section id="stage09:Core" class="story bitfont">
       <p class="title">
         <span class="index"></span><br/><span class="name"></span>
       </p>
-      <p></p>
+      <p>
+        むせる ような あつさ。
+        ここが ちの そこ なのか。
+      </p>
+      <p>
+        まっくら やみ の その先 に さらに くらい なにか が うごめいて いる。
+        あれは ... ヤミの 女王 アリル !?
+      </p>
+      <p>
+      </p>
+      <p>
+      </p>
       <p><br/></p>
     </section>
     <section id="stage10:Lyra" class="story bitfont">
